covid project complete code